# semantic-scholar-mcp-fix

./: README.md  pyproject.toml  pytest.ini
.claude/: settings.json
docs/: swagger.json
src/semantic_scholar_mcp/: __init__.py  cli.py  server.py
tests/: conftest.py  test_cli.py  test_integration.py  test_server.py
